# ----RESTORA-OS

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  check_sa.py  create_shifts_table.py  create_superadmin.py  fix_orders_table.py  migrate_hierarchy.py  pyproject.toml  reset_admin.py  reset_sa.py  seed_dashboard_data.py  seed_kitchen.py  seed_manager.py  test_hash.py  update_images.py
backend/src/: config.py  main.py
backend/src/adapters/api/v1/: admin.py  auth.py  menu.py  orders.py  payments.py  reports.py  schemas.py  tables.py
backend/src/adapters/api/v1/websockets/: kitchen_ws.py
backend/src/adapters/cache/: redis_pubsub.py
backend/src/adapters/persistence/: database.py
backend/src/adapters/persistence/models/: models.py
backend/src/domain/entities/: company.py  order.py  product.py  restaurant.py  table.py  user.py
backend/src/shared/security/: audit.py  dependencies.py  digital_signature.py  jwt_handler.py  rate_limiter.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/apps/admin/: AdminApp.tsx
frontend/src/apps/admin/views/: BranchesManagementView.tsx  ConfigView.tsx  DashboardView.tsx  (+5 more)
frontend/src/apps/cashier/: CashierApp.tsx
frontend/src/apps/kitchen/: KitchenApp.tsx  KitchenLogin.tsx  KitchenWrapper.tsx
frontend/src/apps/superadmin/: SuperAdminApp.tsx  SuperAdminLogin.tsx
frontend/src/apps/waiter/: WaiterApp.tsx
frontend/src/hooks/: useRestaurantSocket.ts
infra/postgres/: init.sql  seed.sql
infra/scripts/: backup.sh
(+14 files in other folders)
